Closed
Bug 1235099
Opened 5 years ago
Closed 5 years ago
Remove the NS_APP_BOOKMARKS_50_FILE directory service key
Categories
(Firefox :: Bookmarks & History, defect)
Firefox
Bookmarks & History
Tracking
()
RESOLVED
FIXED
Firefox 46
Tracking | Status | |
---|---|---|
firefox46 | --- | fixed |
People
(Reporter: glandium, Assigned: glandium)
Details
Attachments
(1 file, 1 obsolete file)
8.13 KB,
patch
|
Dolske
:
review+
|
Details | Diff | Splinter Review |
Nothing in mozilla-central uses the NS_APP_BOOKMARKS_50_FILE/BMarks key except tests. It's also not been very useful since the switch to places in ... Firefox 3? so even if addons use it, it's not doing them much good. BookmarkHTMLUtils.defaultPath returns the same thing anyways for those that really do insist on getting the equivalent thing (but I'd argue BookmarkHTMLUtils.defaultPath, as well as the browser.bookmarks.file pref could just go away as well). Seamonkey does use NS_APP_BOOKMARKS_50_FILE/BMarks, but they really only need the #define, which they can add in their source.
Assignee | ||
Comment 1•5 years ago
|
||
Attachment #8701887 -
Flags: review?(dolske)
Comment 2•5 years ago
|
||
Err, did you attach the right patch? It doesn't touch NS_APP_BOOKMARKS_50_FILE at all.
Flags: needinfo?(mh+mozilla)
Assignee | ||
Comment 3•5 years ago
|
||
That was, indeed, the wrong patch.
Attachment #8701887 -
Attachment is obsolete: true
Attachment #8701887 -
Flags: review?(dolske)
Flags: needinfo?(mh+mozilla)
Attachment #8703940 -
Flags: review?(dolske)
Updated•5 years ago
|
Attachment #8703940 -
Flags: review?(dolske) → review+
Comment 5•5 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/91267331f36f
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 46
Comment 6•5 years ago
|
||
[bugday-20160323] Status: RESOLVED,FIXED -> UNVERIFIED Comments: STR: Not clear. Developer specific testing Component: Name Firefox Version 46.0b9 Build ID 20160322075646 Update Channel beta User Agent Mozilla/5.0 (Windows NT 6.1; WOW64; rv:46.0) Gecko/20100101 Firefox/46.0 OS Windows 7 SP1 x86_64 Expected Results: Developer specific testing Actual Results: As expected
You need to log in
before you can comment on or make changes to this bug.
Description
•