xpcom/io/nsAppDirectoryServiceDefs.h
@@ -74,8 +74,6 @@
 #define NS_APP_USER_MIMETYPES_50_FILE           "UMimTyp"
 #define NS_APP_CACHE_PARENT_DIR                 "cachePDir"
 
-#define NS_APP_BOOKMARKS_50_FILE                "BMarks"
-
 #define NS_APP_DOWNLOADS_50_FILE                "DLoads"
 
 #define NS_APP_SEARCH_50_FILE                   "SrchF"
